--- a/sushi_library/templates/base.html
+++ b/sushi_library/templates/base.html
@@ -8,6 +8,25 @@
 </head>
 
 <body>
+{% block navi %}
+    <nav class="navbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'library:index' %}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'library:register' %}">Book Registration</a>
+            </li>
+        </ul>
+        {% if user.is_authenticated %}
+            <p>{{ user.get_username }}</p>
+            <a href="{% url 'account_logout' %}">logout</a>
+        {% else %}
+            <a href="{% url 'account_login' %}">login</a>
+        {% endif %}
+    </nav>
+{% endblock %}
+
 {% block content %}{% endblock %}
 </body>
 
