--- a/sushi_library/templates/base.html
+++ b/sushi_library/templates/base.html
@@ -2,30 +2,57 @@
 <!DOCTYPE html>
 <html lang=en>
 <head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     {% block head %}{% endblock %}
 </head>
-
-<body>
+<font align="middle"><font size="30"><strong>Sushi Library</strong></font></font>
+<body background="https://thumbs.dreamstime.com/z/%E4%B9%A6%E5%9B%BE%E4%B9%A6%E9%A6%86%E6%97%A0%E7%BC%9D%E7%9A%84%E6%A0%B7%E5%BC%8F%E6%88%96%E8%83%8C%E6%99%AF-61396384.jpg">
 {% block navi %}
     <nav class="navbar">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'library:index' %}">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'library:register' %}">Book Registration</a>
-            </li>
-        </ul>
+		<img width="300" height="200" align="middle" src="https://images.indianexpress.com/2020/04/books_1200.jpg">
+            <div class="container overflow-hidden">
+			<div class="row gy-5">
+			<div class="col-6">
+      <div class="p-3 border bg-light">
+	  <li class="nav-item">
+               <font face="fantasy"> <a class="nav-link" href="{% url 'library:index' %}">Home</a></font>
+            </li></div>
+    </div>
+            <div class="col-6">
+      <div class="p-3 border bg-light">
+	  <li class="nav-item">
+               <font face="fantasy"> <a class="nav-link" href="{% url 'library:register' %}">Book Registration</a></font>
+            </li></div>
+    </div>
+         
+		 <div class="col-6">
+      <div class="p-3 border bg-light">
+	  <li class="nav-item">
         {% if user.is_authenticated %}
             <p>{{ user.get_username }}</p>
-            <a href="{% url 'account_logout' %}">logout</a>
+           <font face="fantasy"> <a href="{% url 'account_logout' %}">logout</a></font></font>
         {% else %}
-            <a href="{% url 'account_login' %}">login</a>
+           <font face="fantasy"> <a href="{% url 'account_login' %}">login</a></font></font>
         {% endif %}
+		</li></div>
+		</ul>
+	 </div>
+</div>
     </nav>
 {% endblock %}
+ <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    -->
 
 {% block content %}{% endblock %}
 </body>
